# bailing-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  pyproject.toml  pytest.ini  requirements-chroma.txt  requirements.txt
.github/workflows/: ci.yml
backend/scripts/: ask.py  build_index.py  cleanup_data_storage.py  export_query_traces.py  recover_failed_deletions.py  run_ragas_eval.py
backend/src/: __init__.py
backend/src/api/: main.py  schemas.py
backend/src/core/: __init__.py  chat_store.py  config.py  dependencies.py  (+2 more)
backend/tests/: conftest.py  test_api.py  test_block_graph.py  test_chat_store.py  test_chunking.py  test_cleaning.py  test_cleanup_data_storage_script.py  test_generate_service.py  test_index_manager.py  test_loaders.py  test_parent_child_chunking.py  test_parent_store.py  test_pdf_cleaning.py  test_pdf_parser.py  test_query_expansion.py  test_query_router.py  test_ragas_eval_script.py  test_rerank.py  test_retrieval_retry.py  test_session_file_upload.py  test_vector_store.py
docs/: README.en.md  README.md  roadmap.txt
frontend/: app.js  index.html  styles.css
scripts/: __init__.py  ask.py  build_index.py
src/api/: main.py  schemas.py
src/core/: config.py  dependencies.py  models.py  text.py
src/generate/: prompts.py  service.py
src/ingest/: __init__.py  chunking.py  loaders.py  service.py
src/models/: __init__.py
src/retrieve/: __init__.py  providers.py  store.py
tests/: conftest.py  test_api.py  test_generate_service.py  test_loaders.py  test_vector_store.py
tests/fixtures/: eval_dataset.json
(+25 files in other folders)
