[project]
name = "bailing-agent"
version = "0.1.0"
description = "A lightweight backend-first RAG assistant for engineering documents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-text-splitters>=1.0,<2.0",
    "langchain-mineru>=0.1.3,<0.2",
    "openai>=1.40,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "pymupdf>=1.24,<2.0",
    "pymupdf4llm>=0.0.20,<1.0",
    "unstructured>=0.15,<0.16",
    "python-docx>=1.1,<2.0",
    "jq>=1.8,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8,<2.0",
    "rank-bm25>=0.2,<1.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff>=0.11,<1.0",
]
test = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]
eval = [
    "ragas>=0.2,<0.3",
    "datasets>=2.19,<3.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "backend/.pytest-tmp",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
